# brahma-sales-assist

./: .gitignore  GENERAL_RULES.md  features.json  tasks.json
agents/agents-context/: orchestrator-setup.md
agents/orchestrator/: .env  main.py  pyproject.toml
agents/orchestrator/orchestrator-agent/: agent.py
project-context/: project-goal.md
scripts/: .githooks-reference.md  README.md  setup-git-hooks.sh
scripts/hooks/: post-commit  pre-commit
ui/src/: App.tsx
ui/src/components/agent/: .gitkeep
ui/src/components/layout/: AppLayout.tsx  DragHandle.tsx  Header.tsx  InputBox.tsx  MainCanvas.tsx  Sidebar.tsx  index.ts
ui/src/components/leads/: .gitkeep
ui/src/hooks/: useUIContext.ts
ui/src/lib/: context-manager.ts
ui/src/pages/: .gitkeep
ui/src/types/: context.ts
ui/ui-context/: context-tracking.md  developemnt-instruction.md  folder-structure.md  foundation-implementation.md  natural-language-control-breakdown.md
